test (DEVEXP-212): Adding regression tests